--- a/HelloiOSWorld/Base.lproj/Main.storyboard
+++ b/HelloiOSWorld/Base.lproj/Main.storyboard
@@ -34,6 +34,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="81" y="-96"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Wyw-wg-Dqt">
